<resources>
    <string name="app_name">Unit 2 - Project 4 - Tip Time</string>
    <string name="calculate_tip">Calculate Tip</string>
    <string name="tip_amount">Tip Amount: %s</string>
    <string name="bill_amount">Bill Amount</string>
    <string name="how_was_the_service">Tip Percentage</string>
    <string name="round_up_tip">Round up tip?</string>
</resources>
