...
        modifier = Modifier.fillMaxWidth(),
    ) {
        Text(stringResource(R.string.round_up_tip))
        Switch(
            checked = roundTip,
            onCheckedChange = onRoundTipChange,
            modifier = Modifier.testTag("ROUNDUP_SWITCH")
        )
    }
}

@VisibleForTesting
internal fun calculateTip(
...
