<resources>
    <string name="app_name">Unit 3 - Project 5 - Thirty days</string>
    <string name="app_title">30 Days</string>
    <string name="tip1_title">We are what we repeatedly do</string>
    <string name="tip1_subtitle">We are what we repeatedly do. Excellence, then, is not an act, but a habit.</string>
    <string name="tip1_author">Aristotle</string>
    <string name="tip2_title">Productive work</string>
    <string name="tip2_subtitle">Productive work is the purpose of a man\'s life, it is his noblest activity.</string>
    <string name="tip2_author">Ayn Rand</string>
    <string name="tip3_title">Discipline comes from within the self</string>
    <string name="tip3_subtitle">Discipline comes from within the self. You are the architect of your life. You are responsible for what you do. So do it. How? Change your behavior and your cognition will follow. Change your habits and your thoughts will follow.</string>
    <string name="tip3_author">Micheal Shermer</string>
    <string name="tip4_title">Excellence is not a destination</string>
    <string name="tip4_subtitle">Excellence is not a destination; it is a continuous journey.</string>
    <string name="tip4_author">Ralph Waldo Emerson</string>
    <string name="tip5_title">The first rule of life is the second rule of thermodynamics</string>
    <string name="tip5_subtitle">The first rule of life is the second rule of thermodynamics. Humans are open systems. We capture energy from food and convert it to power our muscles to move and push back against entropy, like making coffee, cleaning the house, going to work, and so forth. Your purpose in life is to expend energy to carve out pockets of order that lead to survival and flourishing.</string>
    <string name="tip5_author">Micheal Shermer</string>
    <string name="tip6_title">The virtue of selfishness</string>
    <string name="tip6_subtitle">The virtue of selfishness means rationally pursuing one\'s own happiness as a moral purpose.</string>
    <string name="tip6_author">Ayn Rand</string>
    <string name="tip7_title">The achievement of one\'s values</string>
    <string name="tip7_subtitle">Happiness is that state of consciousness which proceeds from the achievement of one\'s values.</string>
    <string name="tip7_author">Ayn Rand</string>
    <string name="tip8_title">There is no path to happiness</string>
    <string name="tip8_subtitle">There is no path to happiness; happiness is the path.</string>
    <string name="tip8_author">Buddha</string>
    <string name="tip9_title">Some things are within our control</string>
    <string name="tip9_subtitle">Happiness and freedom begin with a clear understanding of one principle: Some things are within our control, and some things are not.</string>
    <string name="tip9_author">Epictetus</string>
    <string name="tip10_title">The man who does not value himself</string>
    <string name="tip10_subtitle">The man who does not value himself cannot value anything or anyone.</string>
    <string name="tip10_author">Ayn Rand</string>
    <string name="tip11_title">Author of your own health</string>
    <string name="tip11_subtitle">Every human being is the author of his own health or disease.</string>
    <string name="tip11_author">Buddha</string>
    <string name="tip12_title">Live for your own happiness</string>
    <string name="tip12_subtitle">To live for your own happiness is a moral purpose.</string>
    <string name="tip12_author">Ayn Rand</string>
    <string name="tip13_title">Don\'t eat the marshmallow</string>
    <string name="tip13_subtitle">Don\'t eat the marshmallow. Not eating the marshmallow is good for both your body and your mind. And all of life is a series of marshmallow tests.</string>
    <string name="tip13_author">Michael Shermer</string>
    <string name="tip14_title">Well-ordered government</string>
    <string name="tip14_subtitle">The commerce which is encouraged by a well-ordered government is productive of great wealth.</string>
    <string name="tip14_author">Adam Smith</string>
    <string name="tip15_title">I am the master of my fate</string>
    <string name="tip15_subtitle">I am the master of my fate, I am the captain of my soul.</string>
    <string name="tip15_author">William Ernest Henley</string>
    <string name="day_number">Day %1$d</string>
</resources>
