...
    modifier: Modifier = Modifier,
    contentPadding: PaddingValues = PaddingValues(0.dp)
) {
    LazyColumn(
        verticalArrangement = Arrangement.spacedBy(16.dp),
        contentPadding = contentPadding,
        modifier = modifier.testTag("THIRTY_DAYS_LIST")
    ) {
        itemsIndexed(tips) { index, tip ->
            ThirtyDaysItem(
                tip = tip,
                dayNumber = index + 1,
                modifier = Modifier.fillMaxWidth()
...
    tip: Tip, dayNumber: Int, modifier: Modifier = Modifier
) {
    var expanded by rememberSaveable { mutableStateOf(false) }
    ElevatedCard(
        modifier = modifier
            .clickable(onClick = { expanded = !expanded })
            .testTag("THIRTY_DAYS_CARD")
    ) {
        Column(
            verticalArrangement = Arrangement.spacedBy(8.dp),
            modifier = Modifier
                .padding(8.dp)
                .fillMaxWidth()
...
